# mcp-workshop

./: .env  README.md  client_http_datajus.py  client_stdio.py  client_stdio_complete.py  pyproject.toml
customers/: gabriel_pontes.json
servers/: credito_tools.py  datajus_tools.py  generic_tools.py
