[project]
name = "nuclea-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.34.1",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-google-vertexai>=2.0.25",
    "langchain-mcp-adapters>=0.1.4",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "mcp[cli]>=1.9.2",
    "python-dotenv>=1.1.0",
]

[tool.uv.workspace]
members = [
    "customers/advanced-gp-agent",
]
